CHANGELOG

2.0.37
UTILS:
* UTIL type=Rule | introduce 'filter=(timestamp-first-hit.fast < - 90 days)'
* UTIL type=rule | introduce actions=action-set:[ACTION] | supported Security Rule actions: 'allow','deny','drop','reset-client','reset-server','reset-both'

BUGFIX:
* UTIL type=address actions=delete 'filter=(object is.unused)' | bugfix for FW to not delete used objects - not fixed yet or Panorama
* class SecurityRule | bugfix for method 'API_setAction()'

GENERAL:


2.0.36 (20220419)
UTILS:
* UTIL type=device | introduce idle time for actions=system-admin-session
* UTIL type=device | actions=system-admin-session:delete,8
* UTIL type=service-merger | extend output with protocol
* UTIL type=ALLOBJECTMERGER script | shadow-json and exportcsv argument will now also store HTML file locally
* class Tag | improve method setColor() - to successfully read SASE API config response
* UTIL type=service | delete deprecated actions=deleteForce - use actions=delete-Force
* class SecurityRule - introduce rewriteSchedule_XML() - use it in new method referencedObjectRenamed()

BUGFIX:
* CLASS ZoneStore/AddressStore/ObjStore/ServiceStore | bugfix to NOT search parentstore of object name during creation of new object
* class UTIL | bugfix for Fawkes config type related to timezone setting
* class Schedule | bugfix for method setRecurringDaily() - rewritexml correction
* UTIL type=rule | bugfix for actions=from-Set-Any / actions=src-dst-swap
* UTIL type=address | bugfix related to custom Region object - class Region()
* class AddressGroup | bugfix for dynamic AddressGroup - do not add own Group if tagged as member

GENERAL:
* framework | API KEY will be revert to send via URL, not using the secure method to send via Header which is available since PAN-OS 9.0
* framework | extend test_actions and test_filers


2.0.35 (20220411)
UTILS:
* UTIL type=device | introduce actions=system-restart / system-mgt-config_users /  system-admin-session:display / system-admin-session:delete,1