@@ -4,6 +4,7 @@ CHANGELOG
 UTILS:
 * UTIL type=Rule | introduce 'filter=(timestamp-first-hit.fast < - 90 days)'
 * UTIL type=rule | introduce actions=action-set:[ACTION] | supported Security Rule actions: 'allow','deny','drop','reset-client','reset-server','reset-both'
+* UTIL type=service | introduce new additional argument actions=exporttoexcel,FILE.HTML,resolvesrv
 
 BUGFIX:
 * UTIL type=address actions=delete 'filter=(object is.unused)' | bugfix for FW to not delete used objects - not fixed yet or Panorama
